@@ -4,36 +4,33 @@ import com.google.common.collect.Lists;
 import mod.azure.azurelib.common.api.common.animatable.GeoItem;
 import mod.azure.azurelib.common.internal.client.RenderProvider;
 import mod.azure.azurelib.common.internal.common.animatable.SingletonGeoAnimatable;
-import mod.azure.azurelib.common.internal.common.core.animatable.instance.AnimatableInstanceCache;
-import mod.azure.azurelib.common.internal.common.core.animation.AnimatableManager;
-import mod.azure.azurelib.common.internal.common.core.animation.Animation;
-import mod.azure.azurelib.common.internal.common.core.animation.AnimationController;
-import mod.azure.azurelib.common.internal.common.core.animation.RawAnimation;
-import mod.azure.azurelib.common.internal.common.core.object.PlayState;
 import mod.azure.azurelib.common.internal.common.util.AzureLibUtil;
+import mod.azure.azurelib.core.animatable.instance.AnimatableInstanceCache;
+import mod.azure.azurelib.core.animation.AnimatableManager;
+import mod.azure.azurelib.core.animation.Animation;
+import mod.azure.azurelib.core.animation.AnimationController;
+import mod.azure.azurelib.core.animation.RawAnimation;
+import mod.azure.azurelib.core.object.PlayState;
 import mod.azure.hwg.client.render.GunRender;
 import mod.azure.hwg.entity.projectiles.GrenadeEntity;
-import mod.azure.hwg.item.ammo.GrenadeEmpItem;
 import mod.azure.hwg.item.enums.GunTypeEnum;
 import mod.azure.hwg.util.Helper;
 import mod.azure.hwg.util.registry.HWGItems;
 import mod.azure.hwg.util.registry.HWGSounds;
-import net.fabricmc.api.EnvType;
-import net.fabricmc.api.Environment;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.renderer.BlockEntityWithoutLevelRenderer;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.ListTag;
+import net.minecraft.core.component.DataComponents;
+import net.minecraft.network.chat.CommonComponents;
 import net.minecraft.network.chat.Component;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.sounds.SoundSource;
-import net.minecraft.util.RandomSource;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.InteractionResultHolder;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.entity.projectile.AbstractArrow;
+import net.minecraft.world.entity.projectile.Projectile;
 import net.minecraft.world.item.*;
+import net.minecraft.world.item.component.ChargedProjectiles;
 import net.minecraft.world.item.enchantment.EnchantmentHelper;
 import net.minecraft.world.item.enchantment.Enchantments;
 import net.minecraft.world.level.Level;
@@ -44,37 +41,21 @@ import org.joml.Quaternionf;
 import java.util.List;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
-import java.util.function.Supplier;
 
 public class GrenadeLauncherItem extends HWGGunLoadedBase implements GeoItem {
 
     public static final Predicate<ItemStack> EMP = stack -> stack.getItem() == HWGItems.G_EMP;
-    public static final Predicate<ItemStack> GRENADES = EMP.or(stack -> stack.getItem() == HWGItems.G_FRAG).or(stack -> stack.getItem() == HWGItems.G_NAPALM).or(stack -> stack.getItem() == HWGItems.G_SMOKE).or(stack -> stack.getItem() == HWGItems.G_STUN);
+    public static final Predicate<ItemStack> GRENADES = EMP.or(stack -> stack.getItem() == HWGItems.G_FRAG).or(
+            stack -> stack.getItem() == HWGItems.G_NAPALM).or(stack -> stack.getItem() == HWGItems.G_SMOKE).or(
+            stack -> stack.getItem() == HWGItems.G_STUN);
     private final AnimatableInstanceCache cache = AzureLibUtil.createInstanceCache(this);
-    private final Supplier<Object> renderProvider = GeoItem.makeRenderer(this);
     private boolean charged = false;
     private boolean loaded = false;
 
     public GrenadeLauncherItem() {
-        super(new Item.Properties().stacksTo(1).durability(31));
+        super(new Item.Properties().stacksTo(1).durability(31).component(DataComponents.CHARGED_PROJECTILES,
+                ChargedProjectiles.EMPTY));
         SingletonGeoAnimatable.registerSyncedAnimatable(this);
-    }
-
-    private static void shoot(Level world, LivingEntity shooter, InteractionHand hand, ItemStack stack, ItemStack projectile, float soundPitch, boolean creative, float speed, float divergence, float simulated) {
-        if (!world.isClientSide) {
-            var nade = getGrenadeEntity(world, shooter, projectile);
-            var vec3d = shooter.getUpVector(1.0F);
-            var quaternionf = new Quaternionf().setAngleAxis(simulated * ((float) Math.PI / 180), vec3d.x, vec3d.y, vec3d.z);
-            var vec3d2 = shooter.getViewVector(1.0f);
-            var vector3f = vec3d2.toVector3f().rotate(quaternionf);
-            vector3f.rotate(quaternionf);
-            ((AbstractArrow) nade).shoot(vector3f.x, vector3f.y, vector3f.z, speed, divergence);
-
-            stack.hurtAndBreak(1, shooter, p -> p.broadcastBreakEvent(shooter.getUsedItemHand()));
-            world.addFreshEntity(nade);
-
-            world.playSound(null, shooter.getX(), shooter.getY(), shooter.getZ(), HWGSounds.GLAUNCHERFIRE, SoundSource.PLAYERS, 1.0F, 0.9F);
-        }
     }
 
     @NotNull
@@ -83,7 +64,8 @@ public class GrenadeLauncherItem extends HWGGunLoadedBase implements GeoItem {
         var frag = projectile.getItem() == HWGItems.G_FRAG;
         var napalm = projectile.getItem() == HWGItems.G_NAPALM;
         var stun = projectile.getItem() == HWGItems.G_STUN;
-        var nade = new GrenadeEntity(world, projectile, shooter, shooter.getX(), shooter.getEyeY() - 0.15000000596046448D, shooter.getZ(), true);
+        var nade = new GrenadeEntity(world, projectile, shooter, shooter.getX(),
+                shooter.getEyeY() - 0.15000000596046448D, shooter.getZ(), true);
         nade.setState(0);
         if (emp) {
             nade.setVariant(1);
@@ -99,116 +81,20 @@ public class GrenadeLauncherItem extends HWGGunLoadedBase implements GeoItem {
         return nade;
     }
 
-    private static boolean loadProjectiles(LivingEntity shooter, ItemStack projectile) {
-        var i = EnchantmentHelper.getItemEnchantmentLevel(Enchantments.MULTISHOT, projectile);
-        var j = i == 0 ? 1 : 3;
-        var bl = shooter instanceof Player player && player.getAbilities().instabuild;
-        var itemStack = shooter.getProjectile(projectile);
-        var itemStack2 = itemStack.copy();
-
-        for (int k = 0; k < j; ++k) {
-            if (k > 0) itemStack = itemStack2.copy();
-
-            if (itemStack.isEmpty() && bl) {
-                itemStack = new ItemStack(HWGItems.G_SMOKE);
-                itemStack2 = itemStack.copy();
-            }
-
-            if (!loadProjectile(shooter, projectile, itemStack, k > 0, bl)) return false;
-        }
-        return true;
-    }
-
-    private static boolean loadProjectile(LivingEntity shooter, ItemStack crossbow, ItemStack projectile, boolean simulated, boolean creative) {
-        if (projectile.isEmpty()) return false;
-        else {
-            var bl = creative && projectile.getItem() instanceof GrenadeEmpItem;
-            ItemStack itemStack2;
-            if (!bl && !creative && !simulated) {
-                itemStack2 = projectile.split(1);
-                if (projectile.isEmpty() && shooter instanceof Player player)
-                    player.getInventory().removeItem(projectile);
-            } else itemStack2 = projectile.copy();
-
-            putProjectile(crossbow, itemStack2);
+    private static boolean tryLoadProjectiles(LivingEntity shooter, ItemStack crossbowStack) {
+        List<ItemStack> list = draw(crossbowStack, shooter.getProjectile(crossbowStack), shooter);
+        if (!list.isEmpty()) {
+            crossbowStack.set(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.of(list));
             return true;
+        } else {
+            return false;
         }
     }
 
     public static boolean isCharged(ItemStack stack) {
-        return stack.getTag() != null && stack.getTag().getBoolean("Charged");
-    }
-
-    public static void setCharged(ItemStack stack, boolean charged) {
-        stack.getOrCreateTag().putBoolean("Charged", charged);
-    }
-
-    private static void putProjectile(ItemStack crossbow, ItemStack projectile) {
-        var nbt = crossbow.getOrCreateTag();
-        ListTag list;
-        if (nbt.contains("ChargedProjectiles", 9)) list = nbt.getList("ChargedProjectiles", 10);
-        else list = new ListTag();
-
-        var nbtnew = new CompoundTag();
-        projectile.save(nbtnew);
-        list.add(nbtnew);
-        nbt.put("ChargedProjectiles", list);
-    }
-
-    private static List<ItemStack> getProjectiles(ItemStack crossbow) {
-        List<ItemStack> list = Lists.newArrayList();
-        var nbt = crossbow.getTag();
-        if (nbt != null && nbt.contains("ChargedProjectiles", 9)) {
-            var list2 = nbt.getList("ChargedProjectiles", 10);
-            if (list2 != null) for (var i = 0; i < list2.size(); ++i) {
-                var nbt2 = list2.getCompound(i);
-                list.add(ItemStack.of(nbt2));
-            }
-        }
-        return list;
-    }
-
-    private static void clearProjectiles(ItemStack crossbow) {
-        var tag = crossbow.getTag();
-        if (tag != null) {
-            var list = tag.getList("ChargedProjectiles", 9);
-            list.clear();
-            tag.put("ChargedProjectiles", list);
-        }
-    }
-
-    public static boolean hasProjectile(ItemStack crossbow, Item projectile) {
-        return getProjectiles(crossbow).stream().anyMatch(s -> s.getItem() == projectile);
-    }
-
-    public static void shootAll(Level world, LivingEntity entity, InteractionHand hand, ItemStack stack, float speed, float divergence) {
-        var list = getProjectiles(stack);
-        var fs = getSoundPitches(entity.level().random);
-
-        for (int i = 0; i < list.size(); ++i) {
-            var itemStack = list.get(i);
-            var bl = entity instanceof Player player && player.getAbilities().instabuild;
-            if (!itemStack.isEmpty()) {
-                if (i == 0) shoot(world, entity, hand, stack, itemStack, fs[i], bl, speed, divergence, 0.0F);
-                else if (i == 1) shoot(world, entity, hand, stack, itemStack, fs[i], bl, speed, divergence, -10.0F);
-                else if (i == 2) shoot(world, entity, hand, stack, itemStack, fs[i], bl, speed, divergence, 10.0F);
-            }
-        }
-        postShoot(world, entity, stack);
-    }
-
-    private static float[] getSoundPitches(RandomSource random) {
-        var bl = random.nextBoolean();
-        return new float[]{1.0F, getSoundPitch(bl, random), getSoundPitch(!bl, random)};
-    }
-
-    private static float getSoundPitch(boolean flag, RandomSource random) {
-        var f = flag ? 0.63F : 0.43F;
-        return 1.0F / (random.nextFloat() * 0.5F + 1.8F) + f;
-    }
-
-    private static void postShoot(Level world, LivingEntity entity, ItemStack stack) {
-        clearProjectiles(stack);
+        ChargedProjectiles chargedProjectiles = stack.getOrDefault(DataComponents.CHARGED_PROJECTILES,
+                ChargedProjectiles.EMPTY);
+        return !chargedProjectiles.isEmpty();
     }
 
     public static int getPullTime(ItemStack stack) {
@@ -216,13 +102,44 @@ public class GrenadeLauncherItem extends HWGGunLoadedBase implements GeoItem {
         return 25 - 5 * i;
     }
 
-    private static float getSpeed(ItemStack stack) {
-        return stack.getItem() == Items.CROSSBOW && hasProjectile(stack, Items.FIREWORK_ROCKET) ? 1.6F : 3.15F;
+    public void shootAll(Level level, LivingEntity entity, InteractionHand hand, ItemStack stack, float speed, float divergence) {
+        if (!level.isClientSide()) {
+            var chargedProjectiles = stack.set(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.EMPTY);
+            if (chargedProjectiles != null && !chargedProjectiles.isEmpty()) {
+                var bl = entity instanceof Player player && player.getAbilities().instabuild;
+                this.shootNade(level, entity, hand, stack, chargedProjectiles.getItems(), bl, speed, divergence, 0.0F);
+            }
+        }
+    }
+
+    private void shootNade(Level level, LivingEntity shooter, InteractionHand hand, ItemStack stack, List<ItemStack> projectile, boolean creative, float speed, float divergence, float simulated) {
+        float i = 1.0F;
+        for (ItemStack itemStack : projectile) {
+            if (!itemStack.isEmpty()) {
+                i = -i;
+                if (!creative)
+                    stack.hurtAndBreak(this.getDurabilityUse(itemStack), shooter, LivingEntity.getSlotForHand(hand));
+                var nade = getGrenadeEntity(level, shooter, itemStack);
+                var vec3d = shooter.getUpVector(1.0F);
+                var quaternionf = new Quaternionf().setAngleAxis(simulated * ((float) Math.PI / 180), vec3d.x, vec3d.y,
+                        vec3d.z);
+                var vec3d2 = shooter.getViewVector(1.0f);
+                var vector3f = vec3d2.toVector3f().rotate(quaternionf);
+                vector3f.rotate(quaternionf);
+                nade.shoot(vector3f.x, vector3f.y, vector3f.z, speed, divergence);
+                level.addFreshEntity(nade);
+                level.playSound(null, shooter.getX(), shooter.getY(), shooter.getZ(), HWGSounds.GLAUNCHERFIRE,
+                        SoundSource.PLAYERS, 1.0F, 0.9F);
+            }
+        }
     }
 
     @Override
     public void registerControllers(AnimatableManager.ControllerRegistrar controllers) {
-        controllers.add(new AnimationController<>(this, "controller", event -> PlayState.CONTINUE).triggerableAnim("firing", RawAnimation.begin().then("firing", Animation.LoopType.PLAY_ONCE)).triggerableAnim("loading", RawAnimation.begin().then("loading", Animation.LoopType.PLAY_ONCE)));
+        controllers.add(
+                new AnimationController<>(this, "controller", event -> PlayState.CONTINUE).triggerableAnim("firing",
+                        RawAnimation.begin().then("firing", Animation.LoopType.PLAY_ONCE)).triggerableAnim("loading",
+                        RawAnimation.begin().then("loading", Animation.LoopType.PLAY_ONCE)));
     }
 
     @Override
@@ -231,17 +148,12 @@ public class GrenadeLauncherItem extends HWGGunLoadedBase implements GeoItem {
     }
 
     @Override
-    public boolean isEnchantable(ItemStack stack) {
-        return false;
-    }
-
-    @Override
-    public Predicate<ItemStack> getSupportedHeldProjectiles() {
+    public @NotNull Predicate<ItemStack> getSupportedHeldProjectiles() {
         return GRENADES;
     }
 
     @Override
-    public Predicate<ItemStack> getAllSupportedProjectiles() {
+    public @NotNull Predicate<ItemStack> getAllSupportedProjectiles() {
         return GRENADES;
     }
 
@@ -255,35 +167,39 @@ public class GrenadeLauncherItem extends HWGGunLoadedBase implements GeoItem {
         return 16;
     }
 
-    public InteractionResultHolder<ItemStack> use(Level world, Player user, InteractionHand hand) {
-        var itemStack = user.getItemInHand(hand);
-        if (isCharged(itemStack) && itemStack.getDamageValue() < (itemStack.getMaxDamage() - 1) && !user.getCooldowns().isOnCooldown(this)) {
-            shootAll(world, user, hand, itemStack, getSpeed(itemStack), 1.0F);
-            user.getCooldowns().addCooldown(this, 25);
-            setCharged(itemStack, false);
-            if (!world.isClientSide)
-                triggerAnim(user, GeoItem.getOrAssignId(itemStack, (ServerLevel) world), "controller", "firing");
-            var isInsideWaterBlock = user.level().isWaterAt(user.blockPosition());
-            Helper.spawnLightSource(user, isInsideWaterBlock);
-            return InteractionResultHolder.consume(itemStack);
-        } else if (!user.getProjectile(itemStack).isEmpty()) {
-            if (!isCharged(itemStack)) {
-                this.charged = false;
-                this.loaded = false;
-                user.startUsingItem(hand);
-            }
-            return InteractionResultHolder.consume(itemStack);
-        } else return InteractionResultHolder.fail(itemStack);
+    @Override
+    protected void shootProjectile(LivingEntity shooter, Projectile projectile, int index, float velocity, float inaccuracy, float angle, @Nullable LivingEntity target) {
+
     }
 
-    public void releaseUsing(ItemStack stack, Level world, LivingEntity user, int remainingUseTicks) {
-        if (!isCharged(stack) && loadProjectiles(user, stack)) {
-            setCharged(stack, true);
-            var soundCategory = user instanceof Player ? SoundSource.PLAYERS : SoundSource.HOSTILE;
-            world.playSound(null, user.getX(), user.getY(), user.getZ(), HWGSounds.GLAUNCHERRELOAD, soundCategory, 0.5F, 1.0F);
-            if (!world.isClientSide)
-                triggerAnim(user, GeoItem.getOrAssignId(stack, (ServerLevel) world), "controller", "loading");
-            ((Player) user).getCooldowns().addCooldown(this, 15);
+    public @NotNull InteractionResultHolder<ItemStack> use(Level level, Player player, InteractionHand usedHand) {
+        var itemStack = player.getItemInHand(usedHand);
+        ChargedProjectiles chargedProjectiles = itemStack.get(DataComponents.CHARGED_PROJECTILES);
+        if (chargedProjectiles != null && !chargedProjectiles.isEmpty()) {
+            shootAll(level, player, usedHand, itemStack, 2.6f, 1.0F);
+            player.getCooldowns().addCooldown(this, 25);
+            var isInsideWaterBlock = player.level().isWaterAt(player.blockPosition());
+            Helper.spawnLightSource(player, isInsideWaterBlock);
+            if (!level.isClientSide)
+                triggerAnim(player, GeoItem.getOrAssignId(itemStack, (ServerLevel) level), "controller", "firing");
+            return InteractionResultHolder.consume(itemStack);
+        } else if (!player.getProjectile(itemStack).isEmpty()) {
+            player.startUsingItem(usedHand);
+            return InteractionResultHolder.consume(itemStack);
+        } else {
+            return InteractionResultHolder.fail(itemStack);
+        }
+    }
+
+    public void releaseUsing(ItemStack stack, Level level, LivingEntity livingEntity, int remainingUseTicks) {
+        if (!isCharged(stack) && tryLoadProjectiles(livingEntity, stack)) {
+            var soundCategory = livingEntity instanceof Player ? SoundSource.PLAYERS : SoundSource.HOSTILE;
+            level.playSound(null, livingEntity.getX(), livingEntity.getY(), livingEntity.getZ(), HWGSounds.GLAUNCHERRELOAD, soundCategory, 0.5F,
+                    1.0F);
+            if (!level.isClientSide)
+                triggerAnim(livingEntity, GeoItem.getOrAssignId(stack, (ServerLevel) level), "controller", "loading");
+            if (livingEntity instanceof Player player)
+                player.getCooldowns().addCooldown(this, 15);
         }
     }
 
@@ -305,43 +221,33 @@ public class GrenadeLauncherItem extends HWGGunLoadedBase implements GeoItem {
         return getPullTime(stack) + 3000;
     }
 
-    @Environment(EnvType.CLIENT)
-    public void appendHoverText(ItemStack stack, @Nullable Level world, List<Component> tooltip, TooltipFlag context) {
-        var list = getProjectiles(stack);
-        if (isCharged(stack) && !list.isEmpty()) {
-            var itemStack = list.get(0);
-            tooltip.add((Component.translatable("Ammo")).append(" ").append(itemStack.getDisplayName()));
-            if (context.isAdvanced() && itemStack.getItem() == GRENADES) {
-                List<Component> list2 = Lists.newArrayList();
-                HWGItems.G_EMP.appendHoverText(itemStack, world, list2, context);
-                if (!list2.isEmpty()) {
-                    for (int i = 0; i < list2.size(); ++i)
-                        list2.set(i, (Component.literal("  ")).append(list2.get(i)).withStyle(ChatFormatting.GRAY));
-                    tooltip.addAll(list2);
+    @Override
+    public void appendHoverText(ItemStack stack, TooltipContext context, List<Component> tooltipComponents, TooltipFlag tooltipFlag) {
+        ChargedProjectiles chargedProjectiles = stack.get(DataComponents.CHARGED_PROJECTILES);
+        if (chargedProjectiles != null && !chargedProjectiles.isEmpty()) {
+            ItemStack itemStack = chargedProjectiles.getItems().getFirst();
+            tooltipComponents.add(Component.literal("Ammo").append(CommonComponents.SPACE).append(itemStack.getDisplayName()));
+            if (tooltipFlag.isAdvanced() && itemStack.getItem() == GRENADES) {
+                List<Component> list = Lists.newArrayList();
+                HWGItems.G_EMP.appendHoverText(itemStack, context, list, tooltipFlag);
+                if (!list.isEmpty()) {
+                    list.replaceAll(component -> Component.literal("  ").append(component).withStyle(
+                            ChatFormatting.GRAY));
+                    tooltipComponents.addAll(list);
                 }
             }
-
         }
-        tooltip.add(Component.translatable("hwg.ammo.reloadgrenades").withStyle(ChatFormatting.ITALIC));
+        tooltipComponents.add(Component.translatable("hwg.ammo.reloadgrenades").withStyle(ChatFormatting.ITALIC));
     }
 
     @Override
-    public void createRenderer(Consumer<Object> consumer) {
+    public void createRenderer(Consumer<RenderProvider> consumer) {
         consumer.accept(new RenderProvider() {
-            private final GunRender<GrenadeLauncherItem> renderer = null;
-
             @Override
             public BlockEntityWithoutLevelRenderer getCustomRenderer() {
-                if (renderer == null)
-                    return new GunRender<GrenadeLauncherItem>("grenade_launcher", GunTypeEnum.NADELAUNCHER);
-                return this.renderer;
+                return new GunRender<GrenadeLauncherItem>("grenade_launcher", GunTypeEnum.NADELAUNCHER);
             }
         });
-    }
-
-    @Override
-    public Supplier<Object> getRenderProvider() {
-        return this.renderProvider;
     }
 
 }
